--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8081
+
+spring.application.name=consumer
+spring.zipkin.baseUrl=http://localhost:9411
+spring.zipkin.sender.type=web
+
+spring.sleuth.sampler.probability=1.0
