--- a/producer/pom.xml
+++ b/producer/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>producer</artifactId>
 
 
-
     <dependencies>
 
 
@@ -42,6 +41,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
 
         <dependency>
