--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8080
+
+
+spring.application.name=producer
+spring.zipkin.baseUrl=http://localhost:9411
+spring.zipkin.sender.type=web
+
+spring.sleuth.sampler.probability=1.0
